docs: fix tone — acknowledge existing Pi extensions properly

--- a/site/index.html
+++ b/site/index.html
@@ -219,9 +219,9 @@
 <div id="s1" class="sec-head a" style="--i:7">1 — Why pi-rewind?</div>
 
 <div class="node node--hero a" style="--i:8">
-  <h3>Every major coding agent has rewind. Pi didn't — until now.</h3>
-  <p>Claude Code has <code>/rewind</code>. Gemini CLI has <code>/rewind</code>. Cline has per-tool checkpoints. OpenCode has <code>/undo</code> + <code>/redo</code>. Pi's extension API is powerful enough to match or exceed them all.</p>
-  <p style="margin-top:10px">We researched <strong>11 coding agents</strong> (820K tokens of analysis), studied 2 existing Pi extensions, and built the best of everything into one extension.</p>
+  <h3>Pi already had checkpoint extensions. This one combines the best of all of them.</h3>
+  <p><a href="https://github.com/prateekmedia/pi-hooks/tree/main/checkpoint" style="color:var(--accent)">checkpoint-pi</a> brought safe restore and smart filtering. <a href="https://github.com/nicobailon/pi-rewind-hook" style="color:var(--accent)">pi-rewind-hook</a> added resume checkpoints and status UI. But neither had a dedicated <code>/rewind</code> command, per-tool granularity, or a redo stack — features that Claude Code, Cline, and OpenCode ship built-in.</p>
+  <p style="margin-top:10px">We researched <strong>11 coding agents</strong> (820K tokens of analysis), studied both existing Pi extensions, and merged the best ideas into one extension that closes every gap.</p>
 </div>
 
 <!-- ═══════════ 2: INSTALL ═══════════ -->
